# WhiteRiverData

./: .gitignore  CLAUDE.md  LICENSE  README.md  chart_generator.py  data_fetcher.py  forecast_fetcher.py  formatters.py  generate_test_html.py  index.html  main.py  pyproject.toml  pytest.ini  run_white_hole.sh  water_calculator.py  white_hole_conditions.html
.github/workflows/: gitleaks.yml
tests/: __init__.py  conftest.py  test_forecast_fetcher.py  test_formatters.py  test_integration.py  test_water_calculator.py
